--- a/about.html
+++ b/about.html
@@ -207,7 +207,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3><img src="/images/logo.png" alt="KAKN Sites logo" class="site-logo"> KAKN Sites</h3>
+                    <h3><img src="images/logo.png" alt="KAKN Sites logo" class="site-logo"> KAKN Sites</h3>
                     <p>Bridging Teachers and Communities with ICT through practical training and innovative solutions.</p>
                 </div>
                 <div class="footer-column">
