--- a/platform/video-tutorials.html
+++ b/platform/video-tutorials.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Tutorials - KAKN Sites Learning Platform</title>
-    <link rel="icon" type="image/x-icon" href="/images/logo.png">
+    <link rel="icon" type="image/x-icon" href="../images/logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <img src="/images/logo.png" alt="KAKN Sites logo" class="site-logo">
+                    <img src="../images/logo.png" alt="KAKN Sites logo" class="site-logo">
                     <span class="logo-text">KAKN Sites</span>
                 </div>
                 <button class="toggle-btn" id="toggleSidebar">
