--- a/course.html
+++ b/course.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course - KAKN Sites</title>
+    <title>Course | KAKN Sites</title>
     <meta name="description" content="Practical Computer Applications and ICT Integration course for teachers and adults. 7 modules, 4 weeks, certificate awarded.">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -337,6 +337,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="course.html">Course</a></li>
                         <li><a href="research.html">Research</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                         <li><a href="testimonials.html">Testimonials</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -352,7 +353,7 @@
             <div class="footer-bottom">
                 
                 <p>&copy; 2025 KAKN Sites. All Rights Reserved.</p>
-                <p> Designed by Envisage </p>
+                <p> Designed by <a href="https://envisageweb.netlify.app" class="envisage-link" target="_blank" rel="noopener noreferrer">Envisage</a> </p>
             </div>
         </div>
     </footer>
