--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KAKN Sites - Bridging Teachers and Communities with ICT</title>
+    <title>KAKN Sites</title>
     <meta name="description" content="Professional ICT training for teachers, adults, and communities in Uganda. Practical computer skills, digital literacy, and educational technology integration.">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -275,6 +275,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="course.html">Course</a></li>
                         <li><a href="research.html">Research</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                         <li><a href="testimonials.html">Testimonials</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -290,7 +291,7 @@
             <div class="footer-bottom">
                 
                 <p>&copy; 2025 KAKN Sites. All Rights Reserved.</p>
-                <p> Designed by Envisage </p>
+                <p> Designed by <a href="https://envisageweb.netlify.app" class="envisage-link" target="_blank" rel="noopener noreferrer">Envisage</a> </p>
             </div>
         </div>
     </footer>
